DuPont DevSB/src/objects/ccrz__E_RuleTargetSpec__c.object
<CustomObject>
    <fields>
        <fullName>ccrz__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__RuleTargetSpecId__c</fullName>
        <displayFormat>{00000000}</displayFormat>
        <externalId>true</externalId>
        <label>RuleTargetSpec Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ccrz__Rule__c</fullName>
        <label>Rule</label>
        <referenceTo>ccrz__E_Rule__c</referenceTo>
        <relationshipLabel>Rule Target Specs</relationshipLabel>
        <relationshipName>Rule_Target_Specs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccrz__SpecValue__c</fullName>
        <label>SpecValue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Spec__c</fullName>
        <label>Spec</label>
        <referenceTo>ccrz__E_Spec__c</referenceTo>
        <relationshipLabel>Rule Target Specs</relationshipLabel>
        <relationshipName>Rule_Target_Specs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>CC Rule Target Spec</label>
    <nameField>
        <label>Rule Target Spec</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Rule Target Specs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>